# EconDL

./: .gitignore  .gitignore.txt  20var_test.ipynb  6_sep_financial_test.txt  DataLoader_Damien.py  IRF_conditional.npz  README.md  ar2_density_benchmark.ipynb  array_11341407_1_qtr_14nov_test.out  array_14626620_1_mth_20feb_eval.out  array_14626621_1_qtr_20feb_eval.out  array_14642122_1_mth_20feb_eval.out  array_39525966_1_isaac_new_15jul_test.out  array_39525966_2_isaac_new_15jul_test.out  array_39803262_1_test.out  bayesian_eval.ipynb  benchmarks_local.py  betas_test_0.npy  cis521_hw1.ipynb  data_process.ipynb  evaluation_multi_fcast_script.py  evaluation_script.py  evaluation_script_local.py  execution_script.py  execution_script_15jul.py  execution_script_local.py  execution_script_ml.py  execution_script_reestim.py  exp_generator_script.py  fcast_investigation.ipynb  hyp_tuning.py  hyp_tuning_script_local.py  invert_diff_order_script.py  investigation.ipynb  investigation_notebook.ipynb  irf_investigation.ipynb  irf_plotting_investigation.ipynb  monthlyData_updated_8var.csv  multi_forecast_errors.csv  output.txt  (+4 more)
EconDL/: BayesianHypTuning.py  Benchmarks.py  Evaluation.py  Experiment.py  MLExperiment.py  Run.py  TrainVARNN.py  array_39800462_1_test.out  constants.py  ml_benchmark_utils.py  predict_nn.py  utils.py
code/: Benchmarks.py  DataLoader.py  DataProcesser.py  Evaluation.py  Experiment.py  ForecastBenchmarks.py  ForecastMulti.py  ForecastMultiEvaluation.py  IRFUnconditional.py  Run.py  TrainVARNN.py  evaluation_script.py  execution_script.py  nn_hyps.py  (+6 more)
(+152 files in other folders)
