[tool.poetry]
name = "econdl"
version = "0.1.0"
description = ""
authors = ["Isaac Tham <isaactham2@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.0"
pandas = "^1.4.3"
tqdm = "^4.64.0"
sklearn = "^0.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
xgboost = "^1.6.1"
torchvision = "^0.13.0"
colorcet = "^3.0.0"
statsmodels = "0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
